--- a/estilo.css
+++ b/estilo.css
@@ -1,40 +1,42 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;1,400&display=swap');
 
-html{
+html, body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0;
     padding: 0;
-    height: 100%;
     color: white;
     font-family: 'Kanit';
+    min-height: 100vh;
+    background: #000000;
+    font: normal 15pt Arial;
 }
 
-span{
+
+body {
+    justify-content: space-around;
+    background: #000000;
+    font: normal 15 pt Arial;
+}
+span {
     color: #925391;
     text-transform: uppercase;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: #000000;
-    font: normal 15 pt Arial;
-}
-
-header{
+header {
     display: flex;
     flex-direction: row;
-    margin: 0;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
 }
 
-h1{
-    display: flex;
+h1 {
     margin: 1rem 0.2rem;
     height: 2rem;
-    align-items: center;
-    justify-content: center;
 }
 
 div, .close {
@@ -45,25 +47,24 @@ div, .close {
     margin: 1rem;
 }
 
-form{
+form {
     display: flex;
     justify-content: center;
     align-items: center;
     min-width: min-content;
 }
 
-.card{
+.card {
     position: absolute;
-    width:content;
-    padding:0;
-    position:absolute;
-    background:rgb(255, 255, 255);
-    background-position:-1100px -200px;
+    width: max-content;
+    padding: 0;
+    background: rgb(255, 255, 255);
     border-radius: 15px;
     color: black;
     visibility: hidden;
+    left: 50%;
+    transform: translateX(-50%);
 }
-
 h2, .top, .middle, .image, .identify{
     margin:0;
     padding: 0.3rem 1rem;
@@ -160,6 +161,7 @@ header {
 section {
     background: #1f041f;
     border-radius: 10px;
+    max-width: max-content;
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
@@ -173,7 +175,7 @@ footer {
 input {
     width: 80%;
     min-width: min-content;
-    margin: 0.5rem;
+    margin: 0.5rem ;
     padding: 0.3rem;
     border-radius: 5px;
     border: 1px solid blueviolet;
