--- a/src/components/header/header-module.css
+++ b/src/components/header/header-module.css
@@ -6,10 +6,11 @@ header{
 
 h1{
     display: flex;
-    margin: 1rem 0.2rem;
     height: 2rem;
+    justify-content: center;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 span{
