--- a/global.css
+++ b/global.css
@@ -13,6 +13,11 @@ html{
 	min-height: 100vh;
 }
 
+div{
+	display: flex;
+	flex-direction: column;
+	text-align:center;
+}
 
 body{
 	margin: 0;
@@ -21,6 +26,7 @@ body{
 	display: flex;
 	min-height: 100vh;
 	flex-direction: column;
+
 	justify-content: space-between;
 	align-items: center;
 	background: #2D2C30;
@@ -31,6 +37,7 @@ body{
 
 form{
 	display: flex;
+
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
